- remove storage for tensors - upgrade to Java 21